@@ -49,9 +49,9 @@ constructs, does this only when told, and then right in the source code.
 Switching back and forth between the source and preview is easy and
 natural and can be done for each image independently.  Behind the scenes
 of @previewlatex{}, a sophisticated framework of other programs like
-@samp{dvipng}, Dvips and Ghostscript are employed together with a
-special @LaTeX{} style file for extracting the material of interest in
-the background and providing fast interactive response.
+@samp{dvipng}, @samp{dvisvgm}, Dvips and Ghostscript are employed together
+with a special @LaTeX{} style file for extracting the material of interest
+in the background and providing fast interactive response.
 
 @node  Activating preview-latex, Getting started, What use is it?, Introduction
 @section Activating @previewlatex{}
