@@ -490,7 +490,7 @@ Customize'' menu for customization.  Worthwhile settings:
 
 \halign to \hsize{\tabskip=1ptplus1fil\relax#\hfil&\hfil\var{#}\tabskip0pt\cr
 \noalign{\medskip If you have dvipng available:}
-Set to \kbd{dvipng}&preview-image-type\cr
+Set to \kbd{dvi*}&preview-image-type\cr
 \noalign{\medskip \vbox{Keep counter values when regenerating
   single previews:}}
 Set to \kbd{t}&preview-preserve-counters\cr
